--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
   },
   "homepage": "https://tusharpasricha.github.io/owlsomecoffee",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+      "build": "react-scripts --openssl-legacy-provider build",
+    
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
+    
+      
+  
   },
   "eslintConfig": {
     "extends": [
